--- a/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
@@ -46,7 +46,7 @@ body.intro #floater-custom-views-widget .custom-views-content {
 /* === INTRO OVERLAY === */
 
 #floater-custom-views-widget.intro-overlay .floater-body {
-	background-image: linear-gradient(160deg, #212635 0%, #212635 50%, /*#332035*/#372939 100%);;
+	background-image: linear-gradient(160deg, #212635 0%, #212635 50%, /*#332035*/#372939 100%);
 }
 
 /* Categories */
@@ -101,13 +101,14 @@ body.intro #floater-custom-views-widget .custom-views-content {
 	position: absolute;
 	opacity: .15;
 	z-index: 0;
-	transition: opacity .2s ease-in-out .2s, padding .4s ease-in-out;
+	/*transition: opacity .2s ease-in-out .2s, padding .4s ease-in-out;*/
+	transition: opacity .4s ease-in-out, padding .4s ease-in-out;
 }
 .custom-views-dataviews4scope.active {
 	z-index: 2;
 	opacity: 1;
 	padding: 3rem 5rem 5rem 1.5rem;
-	transition: opacity 0s ease-in-out .2s, padding .4s ease-in-out;
+	/*transition: opacity 0s ease-in-out .2s, padding .4s ease-in-out;*/
 }
 .custom-views-dataviews4scope-wrapper {
 	background: white;
