--- a/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.css
@@ -1,41 +1,47 @@
 .dataview-card {
-	padding: .5rem;
+	cursor: pointer;
 	display: flex;
+	flex-direction: column;
 	background: white;
-	border-radius: .2rem;
-	border: 1px solid #ddd;
+	border-radius: .1rem;
+	border: 1px solid #ccc;
 	border-bottom: 2px solid #ddd;
-	border-top: 1px solid #e7e7e7;
-	min-width: 35rem;
-	margin: .3rem;
-	flex-basis: 32%;
+	border-top: 1px solid #ccc;
+	margin: .5rem;
+	max-width: 20rem;
+	min-width: 15rem;
+	padding-bottom: .5rem;
+	width: 30%;
+	transition: background .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+.dataview-card:hover {
+	background: rgb(234,237,241);
+	box-shadow: 0 0 5px 0 rgba(33,38,53,.3);
 }
 .dataview-card-preview {
 	align-self: center;
-	flex-basis: 8rem;
+	width: 100%;
 	height: 6rem;
 }
 .dataview-card-text {
 	flex: 1;
-	padding: 0 2rem 0 .8rem;
+	padding: .7rem;
 }
 .dataview-card-text > h3 {
-	font-size: 1.2rem;
+	font-size: 1.15rem;
 	color: rgb(65,69,81);
-	font-weight: 500;
+	font-weight: 400;
 	margin-bottom: .2rem;
 }
 .dataview-card-text > p {
-	font-size: .85rem;
-	color: rgb(106,110,120);
+	font-size: .9rem;
+	color: rgb(65,69,81);
+	font-weight: 300;
 }
 .dataview-card-tools {
-	flex-basis: 7rem;
-	height: 100%;
-	align-self: center;
-	align-items: flex-end;
 	display: flex;
-	flex-direction: column;
+	justify-content: flex-end;
+	padding: 0 .5rem;
 }
 .dataview-card-buttons {
 	text-align: right;
@@ -44,9 +50,6 @@
 }
 .dataview-card-icons {
 	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	height: 1.2rem;
 }
 .dataview-card-icons .fa {
 	border-radius: .1rem;
