--- a/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
@@ -59,7 +59,6 @@ body.intro #floater-custom-views-widget .custom-views-content {
 	max-width: 30rem;
 	margin: 4.5rem 0 5.5rem 0;
 	padding-top: 5px;
-	font-size: 1rem;
 	overflow: auto;
 }
 /* width */
@@ -146,4 +145,33 @@ body.intro #floater-custom-views-widget .custom-views-content {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+}
+
+
+@media (max-width: 1200px) {
+	.custom-views-category {
+		padding-left: 2rem;
+		font-size: 1rem;
+		line-height: 3rem;
+	}
+}
+
+@media (max-width: 1000px) {
+	/* Categories */
+	.custom-views-categories {
+		margin: 2rem 0 3rem 0;
+	}
+	.custom-views-category {
+		min-width: 18rem;
+		padding-left: 1.5rem;
+	}
+	.custom-views-window,
+	.custom-views-window.second,
+	.custom-views-window.active {
+		padding: 1rem 1rem 1rem 0;
+		/*transition: opacity 0s ease-in-out .2s, padding .4s ease-in-out;*/
+	}
+	.custom-views-window-wrapper {
+		padding: .5rem;
+	}
 }
