--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -253,10 +253,10 @@ body.mode-3d .floater.only-3d.open {
     box-shadow: none;
 }
 .floater.expanded .floater-header {
-    background: rgb(67,66,84);
+    background: #212635;
     cursor: default;
     padding: 0 1rem 0 .7rem;
-    border-top: 2px solid rgba(255,255,255,.1);
+    border-top: 1px solid rgba(255,255,255,.1);
 }
 .floater.expanded .floater-header-title {
     line-height: 2rem;
