--- a/src/__new/js/view/components/Collapse/Collapse.css
+++ b/src/__new/js/view/components/Collapse/Collapse.css
@@ -2,22 +2,27 @@
 
 }
 .component-collapse-header {
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid rgb(204,207,211);
 	cursor: pointer;
 	display: flex;
 	padding: .3rem;
 	transition: background .3s ease-in-out;
 }
 .component-collapse-header:hover {
-	background: #e8e8e8;
+	background: rgb(224,227,231);
 }
 .component-collapse.open .component-collapse-header {
 	border-bottom: 0;
 }
+.component-collapse.open .component-collapse-title,
+.component-collapse.open .component-collapse-arrow:before {
+	color: rgb(224,227,231);
+}
 .component-collapse-title {
 	flex: 1;
-	font-size: .8rem;
-	font-weight: 600;
+	font-size: .9rem;
+	font-weight: 500;
+	color: rgb(65,69,81);
 }
 .component-collapse-arrow {
 	flex-basis: 1rem;
@@ -34,5 +39,5 @@
 	padding: 0 .3rem .5rem;
 }
 .component-collapse.open .component-collapse-body{
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid rgb(204,207,211);
 }
