--- a/src/__new/js/view/settings/Settings.html
+++ b/src/__new/js/view/settings/Settings.html
@@ -1,12 +1,12 @@
 <div class="floating-window tool-window settings-window" id="{{id}}">
     <div class="tool-window-header">
-        <span>{{settings}}</span>
+        <div class="tool-window-title">{{settings}}</div>
         <div class="tool-window-tools-container">
-            <div class="window-close">
-                <img alt="Close" src="__new/img/close.png"/>
-                </div>
+            <div title="Close" class="floater-tool settings-close feature-info-close">
+                &#x2716
             </div>
         </div>
+    </div>
     <div class="tool-window-body">
     </div>
     <div class="tool-window-footer">
