--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -2,11 +2,11 @@
 	<div class="feature-info-window-header">
 		<div class="feature-info-title">{{featureName}}</div>
 		<div class="feature-info-tools">
-			<div class="feature-info-close">
-				<img title="Close" src="__new/img/close.png">
+			<div title="Close" class="floater-tool widget-close feature-info-close">
+				&#x2716
 			</div>
-			<div class="feature-info-settings">
-				<img title="Settings" src="__new/img/settings-gray.png">
+			<div title="Settings" class="floater-tool widget-settings feature-info-settings">
+				<i class="fa fa-sliders"></i>
 			</div>
 		</div>
 	</div>
