--- a/src/__new/js/view/tools/FeatureInfoTool/LayerInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/LayerInfoWindow.css
@@ -12,5 +12,5 @@
 	border-bottom: 0;
 }
 .layer-info-collapse.open .component-collapse-header {
-	background: rgba(201,45,66,.3);
+	background: rgb(65,69,81);
 }
