--- a/src/__new/js/view/table/Table.css
+++ b/src/__new/js/view/table/Table.css
@@ -3,14 +3,14 @@
 	width: 95%;
 }
 .new-table tr th, .new-table tr td {
-	color: #666;
+	color: rgb(65,69,81);
 	padding: 0 .2rem;
 	min-width: 2rem;
 	line-height: 2rem;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid rgb(204,207,211);
 }
 .new-table tr th {
-	color: #666;
+	color: rgb(65,69,81);
 	font-weight: 600;
 	line-height: 1.3rem;
 }
@@ -21,17 +21,20 @@
 
 /* basic table */
 table.basic-table {
-	border: 1px solid #ccc;
+	border: 1px solid rgb(204,207,211);
 	table-layout: fixed;
 }
 table.basic-table tr {
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid rgb(204,207,211);
 }
 table.basic-table tr th {
 	padding: 0 .2rem;
-	background: #e7e7e7;
-	line-height: 1.4rem;
+	background: rgba(224,227,231,.8);
+	line-height: 1.7rem;
 	word-wrap: break-word;
+	font-size: .85rem;
+	font-weight: 400;
+	color: rgb(65,69,81);
 }
 table.basic-table tr td {
 	padding: 0 .2rem;
