--- a/src/__new/js/view/widgets/inputs/checkbox/Radiobox.css
+++ b/src/__new/js/view/widgets/inputs/checkbox/Radiobox.css
@@ -1,16 +1,20 @@
 /* === Radiobox === */
-.radiobox-row.checked .radiobox-icon {
-	background: url('../../../../../img/radio-checked.png') no-repeat center center;
-}
-
 .radiobox-icon {
-	background: url('../../../../../img/radio-unchecked.png') no-repeat center center;
 	display: inline-block;
-	margin-right: .5rem;
+	margin: 0 .2rem;
 	width: 1.2rem;
 	height: 1.2rem;
 	line-height: 1.2rem;
 	transition: background .3s;
+}
+.radiobox-row .radiobox-icon:before {
+	content: "\f1db";
+	font-family: FontAwesome;
+	font-size: 1rem;
+}
+.radiobox-row.checked .radiobox-icon:before {
+	content: "\f05d";
+	color: rgb(153,54,75);
 }
 
 .radiobox-label {
