--- a/src/__new/js/view/widgets/inputs/selectbox/SelectBox.css
+++ b/src/__new/js/view/widgets/inputs/selectbox/SelectBox.css
@@ -3,12 +3,11 @@
     margin: .5rem 0;
 }
 
-.widgets label.select-menu-caption {
-    display: block;
-    font-weight: bold;
-    height: 1.2rem;
-    line-height: 1.2rem;
-    font-size: .8rem;
+label.select-menu-caption {
+    font-weight: 500;
+    height: 1.3rem;
+    line-height: 1.3rem;
+    font-size: .9rem;
 }
 
 .option-count {
