--- a/src/__new/js/view/worldWind/WorldWindMap.css
+++ b/src/__new/js/view/worldWind/WorldWindMap.css
@@ -44,7 +44,7 @@
 /* period label */
 .map-period-label {
 	color: rgba(244,243,239,.9);
-	background: rgba(80,87,94,.9);
+	background: rgba(65,69,81,1);
 	font-weight: 500;
 	font-size: .9rem;
 	height: 1.5rem;
