--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -151,12 +151,21 @@
 }
 .newDesign #header {
 	background: #212635;
-	padding-left: 10px;
-	z-index: 10000;
+	display: flex;
+	padding: 0 1.5rem 0 1rem;
+	z-index: 1;
 }
-
+.newDesign #header .menu {
+	margin: 0;
+	flex: 1;
+	line-height: 50px;
+}
 .newDesign #header .menu li:before {
 	background-color: #888;
+	display: inline-block;
+	vertical-align: text-bottom;
+	position: relative;
+	top: auto;
 }
 
 .newDesign #header a {
@@ -167,12 +176,13 @@
 
 .newDesign #header .user {
 	/* background: #333; */
-	height: 28px;
-	padding-right: 10px;
-	position: absolute;
 	display: inline-block;
 	right: 0;
-	top: 8px;
+	height: auto;
+	top: auto;
+	padding: 0;
+	position: relative;
+	line-height: 50px;
 }
 
 .newDesign #header .user .sep {
@@ -190,73 +200,36 @@
 
 .newDesign #header .user .login:before, .newDesign #header .user .signup:before {
 	display: inline-block;
-	width: 15px;
-	height: 15px;
 	line-height: 15px;
-	margin: -3px 5px 0 0;
-	padding: 0;
 	vertical-align: middle;
-}
-
-.newDesign #header .user .login:before {
-	content: url("../images/new/login.png");
-}
-
-.newDesign #header .user .signup:before {
-	content: url("../images/new/signup.png");
-}
-
-/* header for overlay */
-.newDesign body.intro-overlay #header {
-	background: #212635;
-	display: flex;
-	padding: 0 1.5rem;
-}
-.newDesign body.intro-overlay #header .menu {
-	margin: 0;
-	flex: 1;
-	line-height: 55px;
-}
-.newDesign body.intro-overlay #header .menu li:before {
-	display: inline-block;
-	vertical-align: text-bottom;
-	position: relative;
-	top: auto;
-}
-.newDesign body.intro-overlay #header .user {
-	height: auto;
-	top: auto;
-	padding: 0;
-	position: relative;
-	line-height: 55px;
-}
-.newDesign body.intro-overlay #header a {
-	font-size: 13px;
-	font-weight: 400;
-	color: rgba(148,152,160,1);
-	text-transform: none;
-}
-.newDesign body.intro-overlay #header .user .login:before,
-.newDesign body.intro-overlay #header .user .signup:before {
 	font-family: "FontAwesome";
 	font-size: 1rem;
 	width: auto;
 	height: auto;
 	margin: 0;
-	margin-top: -2px;
 	padding: 0 7px 0 0;
 }
-.newDesign body.intro-overlay #header .user .login:before {
+
+.newDesign #header .user .login:before {
 	content: "\f090";
 }
-.newDesign body.intro-overlay #header .user .login.logged:before {
+
+.newDesign #header .user .login.logged:before {
 	content: "\f2c0";
 }
-.newDesign body.intro-overlay #header .user .signup:before {
+.newDesign #header .user .signup:before {
 	content: "\f234";
 }
-.newDesign body.intro-overlay #header .user .signup.logout:before {
+.newDesign #header .user .signup.logout:before {
 	content: "\f08b";
+}
+
+/* header for overlay */
+.newDesign #header a {
+	font-size: 13px;
+	font-weight: 400;
+	color: rgba(148,152,160,1);
+	text-transform: none;
 }
 
 /* Agreement === */
