--- a/src/__new/js/view/components/Button/Button.css
+++ b/src/__new/js/view/components/Button/Button.css
@@ -44,12 +44,12 @@
 .component-button.compare-button {
 	display: inline-block;
 	vertical-align: middle;
-	background: rgba(255, 255, 255, .25);
-	border: 1px solid rgba(255, 255, 255, .3);
+	background: rgba(255, 255, 255, .15);
+	border: 0;
 	border-radius: .05rem;
 	color: #ddd;
-	height: 23px;
-	line-height: 21px;
+	height: 24px;
+	line-height: 24px;
 }
 .component-button.compare-button:hover {
 	background: rgba(255, 255, 255, .15);
