--- a/src/__new/js/view/components/Select/MultiSelect.css
+++ b/src/__new/js/view/components/Select/MultiSelect.css
@@ -39,23 +39,24 @@
 /* topbar multiselect with arrow*/
 .select-multi-container.top-bar-multiselect {
 	border-radius: 0.05rem;
-	background: rgba(255, 255, 255, .25);
-	border: 1px solid rgba(255, 255, 255, .3);
-	border-left: 0;
+	background: rgba(255, 255, 255, .15);
+	border: 0;
+	border-left: 1px solid rgba(255, 255, 255, .1);
 	color: #ddd;
 }
 .select-multi-container.top-bar-multiselect.onlyArrow {
 	min-height: initial;
-	height: 23px;
+	height: 24px;
 	min-width: initial;
 	width: 26px;
 }
 .select-multi-container.top-bar-multiselect.onlyArrow:before {
 	color: #ddd;
-	height: 20px;;
+	height: 24px;
 }
 .select2-container--default.select2-container--focus .select-multi-container.top-bar-multiselect.select2-selection--multiple {
 	border: 1px solid rgba(255, 255, 255, .3);
-	border-left: 0;
+	border: 0;
+	border-left: 1px solid rgba(255, 255, 255, .1);
 	outline: 0;
 }
