--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -106,7 +106,7 @@
     color: #eee;
     flex: 1;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 500;
 }
 .floater-tools-container {
     display: flex;
@@ -255,7 +255,7 @@ body.mode-3d .floater.only-3d.open {
 .floater.expanded .floater-header {
     background: #212635;
     cursor: default;
-    padding: 0 1rem 0 .7rem;
+    padding: 0 1rem;
     border-top: 1px solid rgba(255,255,255,.1);
 }
 .floater.expanded .floater-header-title {
