--- a/src/__new/js/view/worldWind/WorldWindMap.css
+++ b/src/__new/js/view/worldWind/WorldWindMap.css
@@ -17,7 +17,7 @@
 
 /* close button */
 .close-map-button {
-	background: rgba(80,87,94,.9);
+	background: rgba(65,69,81,1);;
 	border-right: 1px solid rgba(214,213,219,.3);
 	cursor: pointer;
 	display: flex;
