--- a/src/__new/js/view/components/Select/Select.css
+++ b/src/__new/js/view/components/Select/Select.css
@@ -7,17 +7,32 @@
 	 border-radius: 0.05rem;
 	 background: rgba(255, 255, 255, .15);
 	 border: 0;
-	 height: 24px;
+	 height: 26px;
 }
 .select-basic-container.top-bar-select .select2-selection__rendered {
-	line-height: 24px;
+	line-height: 26px;
 	color: #ddd;
 	font-weight: 500;
-	font-size: 13px;
+	font-size: .85rem;
 }
 .select-basic-container.top-bar-select .select2-selection__arrow {
-	height: 24px;
+	height: 26px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.select-basic-container.top-bar-select .select2-selection__arrow:before {
+	content: "\f107";
+	color: rgb(204,207,211);
+	font-family: "FontAwesome";
+	font-size: 1rem;
 }
 .select-basic-container.top-bar-select .select2-selection__arrow > b {
-	border-color: #ddd transparent transparent transparent;
+	border-color: transparent;
+}
+.select2-container--open .select-basic-container.top-bar-select .select2-selection__arrow:before {
+	content: "\f106";
+}
+.select2-container--open .select-basic-container.top-bar-select .select2-selection__arrow > b {
+	border-color: transparent;
 }
