--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -96,8 +96,8 @@
 /* TODO move form declarations to forms*/
 .newDesign #loginwindow .x-form-field {
 	background: rgba(224,227,231,1);
-	font-size: 1.05rem;
-	font-weight: 300;
+	font-size: 1rem;
+	font-weight: 400;
 	line-height: 2rem;
 	border: .1rem solid rgba(224,227,231,1);
 	border-radius: 0 .15rem .15rem 0;
@@ -226,9 +226,9 @@
 
 /* header for overlay */
 .newDesign #header a {
-	font-size: 13px;
+	font-size: .85rem;
 	font-weight: 400;
-	color: rgba(148,152,160,1);
+	color: rgba(168,172,180,1);
 	text-transform: none;
 }
 
@@ -509,6 +509,29 @@
 	color: #555;
 }
 
+/* visualization */
+.newDesign #app-view-selector-visualization-save {
+	height: 26px;
+}
+.newDesign #app-view-selector-visualization-save .x-btn.custom-button.x-btn-default-small {
+	background: rgb(106,110,120);
+	border: 0;
+}
+.newDesign #app-view-selector-visualization-save .x-btn.custom-button.x-btn-default-small .x-btn-inner {
+	font-weight: 500;
+	font-size: .75rem;
+	color: rgb(204,207,211);
+}
+.newDesign #app-view-selector-visualization-manage {
+	height: 26px;
+	width: auto;
+}
+.newDesign #app-view-selector-visualization-manage .x-btn.custom-button.x-btn-default-small {
+	background: rgb(106,110,120);
+	border: 0;
+	width: 26px !important;
+}
+
 /* dataview field */
 .newDesign #legacy-view-selector .dataview {
 	top: 8px;
@@ -611,7 +634,7 @@
 
 .newDesign.x-border-box .x-form-trigger.x-form-refresh-trigger {
 	transition: background .3s ease-out;
-	background: rgba(255, 255, 255, .15) url(../images/new/refresh-white.png) no-repeat 50% 50% !important;
+	background: rgba(255, 255, 255, .15);
 	border-left: 1px solid rgba(255, 255, 255, .1) !important;
 }
 
@@ -625,25 +648,42 @@
 
 .newDesign.x-border-box .custom-combo .x-form-text {
 	border-radius: 1px 0 0 1px;
-	color: #ddd;
+	color: rgb(204,207,211);;
 	background: rgba(255, 255, 255, .15);
 	border: 0;
 	border-right: 0;
-	font-size: 13px;
+	font-size: .85rem;
 	font-weight: 500;
-	height: 24px;
+	height: 26px;
 	transition: background .3s ease-out;
 }
 
 .newDesign.x-border-box .custom-combo .x-form-trigger {
-	background: rgba(255, 255, 255, .15) url(../images/new/expand-white.png) no-repeat 50% 50%;
+	background: rgba(255, 255, 255, .15);
 	border: 0;
 	border-left: 0;
 	border-radius: 0 1px 1px 0;
-	height: 24px;
+	height: 26px;
 	transition: background .3s ease-out;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
+.newDesign.x-border-box .custom-combo .x-form-trigger:before {
+	color: rgb(204,207,211);
+	font-family: "FontAwesome";
+	font-size: 1rem;
+}
+.newDesign.x-border-box .custom-combo .x-form-arrow-trigger:before {
+	content: "\f107";
+}
+.newDesign.x-border-box .custom-combo .x-pickerfield-open .x-form-arrow-trigger:before {
+	content: "\f106";
+}
+.newDesign.x-border-box .custom-combo .x-form-refresh-trigger:before {
+	content: "\f021";
+	font-size: .85rem;
+}
 .newDesign.x-border-box .custom-combo:hover .x-form-text,
 .newDesign.x-border-box .custom-combo:hover .x-form-trigger,
 .newDesign.x-border-box .custom-combo:hover .x-form-trigger.x-form-refresh-trigger {
@@ -675,7 +715,7 @@
 	text-align: center;
 	font-family: serif;
 	font-style: normal;
-	font-size: 13px;
+	font-size: .85rem;
 	font-weight: 600;
 	color: white;
 	background: rgba(100, 100, 100, .8);
@@ -1246,7 +1286,8 @@
 .newDesign .x-boundlist.custom-combo-list .x-boundlist-item {
 	background: #eee;
 	color: #333;
-	padding: 3px 5px;
+	padding: 5px 5px;
+	font-size: .85rem;
 	transition: background .3s ease-out;
 }
 
