--- a/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
+++ b/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
@@ -1,4 +1,4 @@
-<div id="{{id}}" class="dataview-card">
+<div id="dataview-card-{{id}}" class="dataview-card" data-for="{{id}}">
 	<div class="dataview-card-preview"></div>
 	<div class="dataview-card-text">
 		<h3>{{name}}</h3>
@@ -8,7 +8,7 @@
 		<div class="dataview-card-icons">
 			<i class="fa fa-link" aria-hidden="true"></i>
 			<i class="fa fa-pencil-square-o disabled" aria-hidden="true"></i>
-			<i class="fa fa-trash-o disabled" aria-hidden="true"></i>
+			<i class="fa fa-trash-o" aria-hidden="true"></i>
 		</div>
 	</div>
 </div>
