--- a/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
+++ b/src/__new/js/view/widgets/CustomViewsWidget/DataviewCard/DataviewCard.html
@@ -6,9 +6,9 @@
 	</div>
 	<div class="dataview-card-tools">
 		<div class="dataview-card-icons">
-			<i class="fa fa-link" aria-hidden="true"></i>
+			<i title={{urlTitle}} class="fa fa-link" aria-hidden="true"></i>
 			<i class="fa fa-pencil-square-o disabled" aria-hidden="true"></i>
-			<i class="fa fa-trash-o" aria-hidden="true"></i>
+			<i title={{deleteTitle}} class="fa fa-trash-o" aria-hidden="true"></i>
 		</div>
 	</div>
 </div>
