snow help typo correction

--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -41,7 +41,7 @@
 </li>
 <li data-el='#scope-config-time-range' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 	<h5>Select Season</h5>
-	<p>Select winter season. Start and end day of the season may differ depending to selected sensors.
+	<p>Select winter season. Start and end day of the season may differ depending on selected sensors.
 	</p>
 	<div class="tourbus-buttons">
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-prev'>Previous</a>
